[package]
name = "deq"
version = "0.1.0-dev"
authors = ["Shunsuke Ise <ise@ebiiim.com>"]
edition = "2018"
description = "Digital equalizer application"
repository = "https://github.com/ebiiim/deq"
license = "MIT"
default-run = "deq"

[dependencies.deq_filter]
path = "../deq_filter"
version = "0.1.0-dev"

[dependencies.deq_io]
path = "../deq_io"
version = "0.1.0-dev"

[dependencies]
portaudio = "0.7"
log = "0.4"
env_logger = "0.9"
hound = "3.4"
anyhow = "1.0"
getopts = "0.2"
