[package]
name = "deq_io"
version = "0.1.0-dev"
authors = ["Shunsuke Ise <ise@ebiiim.com>"]
edition = "2018"
description = "I/O for DEQ"
repository = "https://github.com/ebiiim/deq"
license = "MIT"

[dependencies.deq_filter]
path = "../deq_filter"
version = "0.1.0-dev"

[dependencies]
portaudio = "0.7"
log = "0.4"
hound = "3.4"
