[package]
name = "kani"
version = "0.1.0-dev"
authors = ["Shunsuke Ise <ise@ebiiim.com>"]
edition = "2018"
description = "Digital equalizer application"
repository = "https://github.com/ebiiim/kani"
license = "MIT"
default-run = "kani_cli"

[dependencies.kani_filter]
path = "../kani_filter"
version = "0.1.0-dev"

[dependencies.kani_io]
path = "../kani_io"
version = "0.1.0-dev"

[dependencies]
portaudio = "0.7"
log = "0.4"
env_logger = "0.9"
hound = "3.4"
anyhow = "1.0"
getopts = "0.2"

[[bin]]
name = "kani_cli"

[[bin]]
name = "kani_cli2"
