[package]
name = "kani_filter"
version = "0.1.0-dev"
authors = ["Shunsuke Ise <ise@ebiiim.com>"]
edition = "2018"
description = "Filters for kani"
repository = "https://github.com/ebiiim/kani"
license = "MIT"

[dependencies]
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[[example]]
name = "bench-return-vs-inplace"

[[example]]
name = "dump_bqfcoeffs"

[[example]]
name = "dump_ir"

[[example]]
name = "dump_vocal_remover_ir"
