[package]
name = "kani_io"
version = "0.1.0-dev"
authors = ["Shunsuke Ise <ise@ebiiim.com>"]
edition = "2018"
description = "I/O for kani"
repository = "https://github.com/ebiiim/kani"
license = "MIT"

[dependencies.kani_filter]
path = "../kani_filter"
version = "0.1.0-dev"

[dependencies]
portaudio = "0.7"
log = "0.4"
hound = "3.4"
anyhow = "1.0"
